pico/http/httpclient_parser.cc

#line 1 "httpclient_parser.rl"
/**
 *
 * Copyright (c) 2010, Zed A. Shaw and Mongrel2 Project Contributors.
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are
 * met:
 *
 *     * Redistributions of source code must retain the above copyright
 *       notice, this list of conditions and the following disclaimer.
 *
 *     * Redistributions in binary form must reproduce the above copyright
 *       notice, this list of conditions and the following disclaimer in the
 *       documentation and/or other materials provided with the distribution.
 *
 *     * Neither the name of the Mongrel2 Project, Zed A. Shaw, nor the names
 *       of its contributors may be used to endorse or promote products
 *       derived from this software without specific prior written
 *       permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
 * IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
 * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
 * PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
 * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

#include "httpclient_parser.h"

#include <assert.h>
#include <ctype.h>
#include <errno.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#define LEN(AT, FPC) (FPC - buffer - parser->AT)
#define MARK(M, FPC) (parser->M = (FPC) - buffer)
#define PTR_TO(F) (buffer + parser->F)
#define check(A, M, ...) \
    if (!(A)) {          \
        errno = 0;       \
        goto error;      \
    }

/** machine **/

#line 155 "httpclient_parser.rl"


/** Data **/

#line 58 "httpclient_parser.cc"
static const int httpclient_parser_start = 1;
static const int httpclient_parser_first_final = 120;
static const int httpclient_parser_error = 0;

static const int httpclient_parser_en_main __attribute__((unused)) = 1;


#line 159 "httpclient_parser.rl"

int httpclient_parser_init(httpclient_parser* parser) {
    int cs = 0;


#line 72 "httpclient_parser.cc"
    {
        cs = httpclient_parser_start;
    }

#line 164 "httpclient_parser.rl"

    parser->cs = cs;
    parser->body_start = 0;
    parser->content_len = -1;
    parser->chunked = 0;
    parser->chunks_done = 0;
    parser->mark = 0;
    parser->nread = 0;
    parser->field_len = 0;
    parser->field_start = 0;
    parser->close = 0;

    return (1);
}


/** exec **/
int httpclient_parser_execute(httpclient_parser* parser, const char* buffer, size_t len, size_t off) {
    parser->nread = 0;
    parser->mark = 0;
    parser->field_len = 0;
    parser->field_start = 0;

    const char *p, *pe;
    int cs = parser->cs;

    assert(off <= len && "offset past end of buffer");

    p = buffer + off;
    pe = buffer + len;

    assert(*pe == '\0' && "pointer does not end on NUL");
    assert(pe - p == (int)len - (int)off && "pointers aren't same distance");


#line 115 "httpclient_parser.cc"
    {
        if (p == pe)
            goto _test_eof;
        switch (cs) {
            case 1:
                if ((*p) == 72)
                    goto tr2;
                if ((*p) < 65) {
                    if (48 <= (*p) && (*p) <= 57)
                        goto tr0;
                } else if ((*p) > 70) {
                    if (97 <= (*p) && (*p) <= 102)
                        goto tr0;
                } else
                    goto tr0;
                goto st0;
            st0:
                cs = 0;
                goto _out;
            tr0:
#line 52 "httpclient_parser.rl"
            {
                MARK(mark, p);
            }
                goto st2;
            st2:
                if (++p == pe)
                    goto _test_eof2;
            case 2:
#line 144 "httpclient_parser.cc"
                switch ((*p)) {
                    case 10:
                        goto tr3;
                    case 13:
                        goto tr4;
                    case 59:
                        goto tr6;
                }
                if ((*p) < 65) {
                    if (48 <= (*p) && (*p) <= 57)
                        goto st2;
                } else if ((*p) > 70) {
                    if (97 <= (*p) && (*p) <= 102)
                        goto st2;
                } else
                    goto st2;
                goto st0;
            tr3:
#line 93 "httpclient_parser.rl"
            {
                parser->chunked = 1;
                parser->content_len = strtol(PTR_TO(mark), NULL, 16);
                parser->chunks_done = parser->content_len <= 0;

                if (parser->chunks_done && parser->last_chunk) {
                    parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
                } else if (parser->chunk_size != NULL) {
                    parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
                } // else skip it
            }
#line 109 "httpclient_parser.rl"
                {
                    parser->body_start = p - buffer + 1;
                    if (parser->header_done != NULL)
                        parser->header_done(parser->data, p + 1, pe - p - 1);
                    {
                        p++;
                        cs = 120;
                        goto _out;
                    }
                }
                goto st120;
            tr7:
#line 109 "httpclient_parser.rl"
            {
                parser->body_start = p - buffer + 1;
                if (parser->header_done != NULL)
                    parser->header_done(parser->data, p + 1, pe - p - 1);
                {
                    p++;
                    cs = 120;
                    goto _out;
                }
            }
                goto st120;
            tr9:
#line 56 "httpclient_parser.rl"
            {
                parser->field_len = LEN(field_start, p);
            }
#line 60 "httpclient_parser.rl"
                {
                    MARK(mark, p);
                }
#line 70 "httpclient_parser.rl"
                {
                    if (parser->http_field != NULL) {
                        parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                    }
                }
#line 109 "httpclient_parser.rl"
                {
                    parser->body_start = p - buffer + 1;
                    if (parser->header_done != NULL)
                        parser->header_done(parser->data, p + 1, pe - p - 1);
                    {
                        p++;
                        cs = 120;
                        goto _out;
                    }
                }
                goto st120;
            tr15:
#line 70 "httpclient_parser.rl"
            {
                if (parser->http_field != NULL) {
                    parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                }
            }
#line 109 "httpclient_parser.rl"
                {
                    parser->body_start = p - buffer + 1;
                    if (parser->header_done != NULL)
                        parser->header_done(parser->data, p + 1, pe - p - 1);
                    {
                        p++;
                        cs = 120;
                        goto _out;
                    }
                }
                goto st120;
            tr74:
#line 66 "httpclient_parser.rl"
            {
                parser->close = 1;
            }
#line 109 "httpclient_parser.rl"
                {
                    parser->body_start = p - buffer + 1;
                    if (parser->header_done != NULL)
                        parser->header_done(parser->data, p + 1, pe - p - 1);
                    {
                        p++;
                        cs = 120;
                        goto _out;
                    }
                }
                goto st120;
            st120:
                if (++p == pe)
                    goto _test_eof120;
            case 120:
#line 242 "httpclient_parser.cc"
                goto st0;
            tr4:
#line 93 "httpclient_parser.rl"
            {
                parser->chunked = 1;
                parser->content_len = strtol(PTR_TO(mark), NULL, 16);
                parser->chunks_done = parser->content_len <= 0;

                if (parser->chunks_done && parser->last_chunk) {
                    parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
                } else if (parser->chunk_size != NULL) {
                    parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
                } // else skip it
            }
                goto st3;
            tr10:
#line 56 "httpclient_parser.rl"
            {
                parser->field_len = LEN(field_start, p);
            }
#line 60 "httpclient_parser.rl"
                {
                    MARK(mark, p);
                }
#line 70 "httpclient_parser.rl"
                {
                    if (parser->http_field != NULL) {
                        parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                    }
                }
                goto st3;
            tr16:
#line 70 "httpclient_parser.rl"
            {
                if (parser->http_field != NULL) {
                    parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                }
            }
                goto st3;
            tr75:
#line 66 "httpclient_parser.rl"
            {
                parser->close = 1;
            }
                goto st3;
            st3:
                if (++p == pe)
                    goto _test_eof3;
            case 3:
#line 290 "httpclient_parser.cc"
                if ((*p) == 10)
                    goto tr7;
                goto st0;
            tr6:
#line 93 "httpclient_parser.rl"
            {
                parser->chunked = 1;
                parser->content_len = strtol(PTR_TO(mark), NULL, 16);
                parser->chunks_done = parser->content_len <= 0;

                if (parser->chunks_done && parser->last_chunk) {
                    parser->last_chunk(parser->data, PTR_TO(mark), LEN(mark, p));
                } else if (parser->chunk_size != NULL) {
                    parser->chunk_size(parser->data, PTR_TO(mark), LEN(mark, p));
                } // else skip it
            }
                goto st4;
            tr12:
#line 56 "httpclient_parser.rl"
            {
                parser->field_len = LEN(field_start, p);
            }
#line 60 "httpclient_parser.rl"
                {
                    MARK(mark, p);
                }
#line 70 "httpclient_parser.rl"
                {
                    if (parser->http_field != NULL) {
                        parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                    }
                }
                goto st4;
            tr18:
#line 70 "httpclient_parser.rl"
            {
                if (parser->http_field != NULL) {
                    parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                }
            }
                goto st4;
            st4:
                if (++p == pe)
                    goto _test_eof4;
            case 4:
#line 334 "httpclient_parser.cc"
                switch ((*p)) {
                    case 33:
                        goto tr8;
                    case 124:
                        goto tr8;
                    case 126:
                        goto tr8;
                }
                if ((*p) < 45) {
                    if ((*p) > 39) {
                        if (42 <= (*p) && (*p) <= 43)
                            goto tr8;
                    } else if ((*p) >= 35)
                        goto tr8;
                } else if ((*p) > 46) {
                    if ((*p) < 65) {
                        if (48 <= (*p) && (*p) <= 57)
                            goto tr8;
                    } else if ((*p) > 90) {
                        if (94 <= (*p) && (*p) <= 122)
                            goto tr8;
                    } else
                        goto tr8;
                } else
                    goto tr8;
                goto st0;
            tr8:
#line 54 "httpclient_parser.rl"
            {
                MARK(field_start, p);
            }
                goto st5;
            st5:
                if (++p == pe)
                    goto _test_eof5;
            case 5:
#line 366 "httpclient_parser.cc"
                switch ((*p)) {
                    case 10:
                        goto tr9;
                    case 13:
                        goto tr10;
                    case 33:
                        goto st5;
                    case 59:
                        goto tr12;
                    case 61:
                        goto tr13;
                    case 124:
                        goto st5;
                    case 126:
                        goto st5;
                }
                if ((*p) < 45) {
                    if ((*p) > 39) {
                        if (42 <= (*p) && (*p) <= 43)
                            goto st5;
                    } else if ((*p) >= 35)
                        goto st5;
                } else if ((*p) > 46) {
                    if ((*p) < 65) {
                        if (48 <= (*p) && (*p) <= 57)
                            goto st5;
                    } else if ((*p) > 90) {
                        if (94 <= (*p) && (*p) <= 122)
                            goto st5;
                    } else
                        goto st5;
                } else
                    goto st5;
                goto st0;
            tr13:
#line 56 "httpclient_parser.rl"
            {
                parser->field_len = LEN(field_start, p);
            }
#line 60 "httpclient_parser.rl"
                {
                    MARK(mark, p);
                }
                goto st6;
            st6:
                if (++p == pe)
                    goto _test_eof6;
            case 6:
#line 406 "httpclient_parser.cc"
                switch ((*p)) {
                    case 33:
                        goto tr14;
                    case 124:
                        goto tr14;
                    case 126:
                        goto tr14;
                }
                if ((*p) < 45) {
                    if ((*p) > 39) {
                        if (42 <= (*p) && (*p) <= 43)
                            goto tr14;
                    } else if ((*p) >= 35)
                        goto tr14;
                } else if ((*p) > 46) {
                    if ((*p) < 65) {
                        if (48 <= (*p) && (*p) <= 57)
                            goto tr14;
                    } else if ((*p) > 90) {
                        if (94 <= (*p) && (*p) <= 122)
                            goto tr14;
                    } else
                        goto tr14;
                } else
                    goto tr14;
                goto st0;
            tr14:
#line 60 "httpclient_parser.rl"
            {
                MARK(mark, p);
            }
                goto st7;
            st7:
                if (++p == pe)
                    goto _test_eof7;
            case 7:
#line 438 "httpclient_parser.cc"
                switch ((*p)) {
                    case 10:
                        goto tr15;
                    case 13:
                        goto tr16;
                    case 33:
                        goto st7;
                    case 59:
                        goto tr18;
                    case 124:
                        goto st7;
                    case 126:
                        goto st7;
                }
                if ((*p) < 45) {
                    if ((*p) > 39) {
                        if (42 <= (*p) && (*p) <= 43)
                            goto st7;
                    } else if ((*p) >= 35)
                        goto st7;
                } else if ((*p) > 46) {
                    if ((*p) < 65) {
                        if (48 <= (*p) && (*p) <= 57)
                            goto st7;
                    } else if ((*p) > 90) {
                        if (94 <= (*p) && (*p) <= 122)
                            goto st7;
                    } else
                        goto st7;
                } else
                    goto st7;
                goto st0;
            tr2:
#line 52 "httpclient_parser.rl"
            {
                MARK(mark, p);
            }
                goto st8;
            st8:
                if (++p == pe)
                    goto _test_eof8;
            case 8:
#line 473 "httpclient_parser.cc"
                if ((*p) == 84)
                    goto st9;
                goto st0;
            st9:
                if (++p == pe)
                    goto _test_eof9;
            case 9:
                if ((*p) == 84)
                    goto st10;
                goto st0;
            st10:
                if (++p == pe)
                    goto _test_eof10;
            case 10:
                if ((*p) == 80)
                    goto st11;
                goto st0;
            st11:
                if (++p == pe)
                    goto _test_eof11;
            case 11:
                if ((*p) == 47)
                    goto st12;
                goto st0;
            st12:
                if (++p == pe)
                    goto _test_eof12;
            case 12:
                if (48 <= (*p) && (*p) <= 57)
                    goto st13;
                goto st0;
            st13:
                if (++p == pe)
                    goto _test_eof13;
            case 13:
                if ((*p) == 46)
                    goto st14;
                if (48 <= (*p) && (*p) <= 57)
                    goto st13;
                goto st0;
            st14:
                if (++p == pe)
                    goto _test_eof14;
            case 14:
                if (48 <= (*p) && (*p) <= 57)
                    goto st15;
                goto st0;
            st15:
                if (++p == pe)
                    goto _test_eof15;
            case 15:
                if ((*p) == 32)
                    goto tr26;
                if (48 <= (*p) && (*p) <= 57)
                    goto st15;
                goto st0;
            tr26:
#line 88 "httpclient_parser.rl"
            {
                if (parser->http_version != NULL)
                    parser->http_version(parser->data, PTR_TO(mark), LEN(mark, p));
            }
                goto st16;
            st16:
                if (++p == pe)
                    goto _test_eof16;
            case 16:
#line 541 "httpclient_parser.cc"
                if (48 <= (*p) && (*p) <= 57)
                    goto tr27;
                goto st0;
            tr27:
#line 52 "httpclient_parser.rl"
            {
                MARK(mark, p);
            }
                goto st17;
            st17:
                if (++p == pe)
                    goto _test_eof17;
            case 17:
#line 553 "httpclient_parser.cc"
                if ((*p) == 32)
                    goto tr28;
                if (48 <= (*p) && (*p) <= 57)
                    goto st17;
                goto st0;
            tr28:
#line 81 "httpclient_parser.rl"
            {
                parser->status = strtol(PTR_TO(mark), NULL, 10);

                if (parser->status_code != NULL)
                    parser->status_code(parser->data, PTR_TO(mark), LEN(mark, p));
            }
                goto st18;
            st18:
                if (++p == pe)
                    goto _test_eof18;
            case 18:
#line 572 "httpclient_parser.cc"
                if ((*p) == 10)
                    goto st0;
                goto tr30;
            tr30:
#line 52 "httpclient_parser.rl"
            {
                MARK(mark, p);
            }
                goto st19;
            st19:
                if (++p == pe)
                    goto _test_eof19;
            case 19:
#line 584 "httpclient_parser.cc"
                switch ((*p)) {
                    case 10:
                        goto tr32;
                    case 13:
                        goto tr33;
                }
                goto st19;
            tr45:
#line 70 "httpclient_parser.rl"
            {
                if (parser->http_field != NULL) {
                    parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                }
            }
                goto st20;
            tr32:
#line 76 "httpclient_parser.rl"
            {
                if (parser->reason_phrase != NULL)
                    parser->reason_phrase(parser->data, PTR_TO(mark), LEN(mark, p));
            }
                goto st20;
            tr42:
#line 60 "httpclient_parser.rl"
            {
                MARK(mark, p);
            }
#line 70 "httpclient_parser.rl"
                {
                    if (parser->http_field != NULL) {
                        parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                    }
                }
                goto st20;
            tr111:
#line 70 "httpclient_parser.rl"
            {
                if (parser->http_field != NULL) {
                    parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                }
            }
#line 105 "httpclient_parser.rl"
                {
                    parser->chunked = 1;
                }
                goto st20;
            tr113:
#line 105 "httpclient_parser.rl"
            {
                parser->chunked = 1;
            }
                goto st20;
            tr158:
#line 62 "httpclient_parser.rl"
            {
                parser->content_len = strtol(PTR_TO(mark), NULL, 10);
            }
#line 70 "httpclient_parser.rl"
                {
                    if (parser->http_field != NULL) {
                        parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                    }
                }
                goto st20;
            st20:
                if (++p == pe)
                    goto _test_eof20;
            case 20:
#line 649 "httpclient_parser.cc"
                switch ((*p)) {
                    case 10:
                        goto tr7;
                    case 13:
                        goto st3;
                    case 33:
                        goto tr35;
                    case 67:
                        goto tr36;
                    case 84:
                        goto tr37;
                    case 99:
                        goto tr36;
                    case 116:
                        goto tr37;
                    case 124:
                        goto tr35;
                    case 126:
                        goto tr35;
                }
                if ((*p) < 45) {
                    if ((*p) > 39) {
                        if (42 <= (*p) && (*p) <= 43)
                            goto tr35;
                    } else if ((*p) >= 35)
                        goto tr35;
                } else if ((*p) > 46) {
                    if ((*p) < 65) {
                        if (48 <= (*p) && (*p) <= 57)
                            goto tr35;
                    } else if ((*p) > 90) {
                        if (94 <= (*p) && (*p) <= 122)
                            goto tr35;
                    } else
                        goto tr35;
                } else
                    goto tr35;
                goto st0;
            tr35:
#line 54 "httpclient_parser.rl"
            {
                MARK(field_start, p);
            }
                goto st21;
            tr76:
#line 66 "httpclient_parser.rl"
            {
                parser->close = 1;
            }
#line 54 "httpclient_parser.rl"
                {
                    MARK(field_start, p);
                }
                goto st21;
            st21:
                if (++p == pe)
                    goto _test_eof21;
            case 21:
#line 695 "httpclient_parser.cc"
                switch ((*p)) {
                    case 33:
                        goto st21;
                    case 58:
                        goto tr39;
                    case 124:
                        goto st21;
                    case 126:
                        goto st21;
                }
                if ((*p) < 45) {
                    if ((*p) > 39) {
                        if (42 <= (*p) && (*p) <= 43)
                            goto st21;
                    } else if ((*p) >= 35)
                        goto st21;
                } else if ((*p) > 46) {
                    if ((*p) < 65) {
                        if (48 <= (*p) && (*p) <= 57)
                            goto st21;
                    } else if ((*p) > 90) {
                        if (94 <= (*p) && (*p) <= 122)
                            goto st21;
                    } else
                        goto st21;
                } else
                    goto st21;
                goto st0;
            tr41:
#line 60 "httpclient_parser.rl"
            {
                MARK(mark, p);
            }
                goto st22;
            tr39:
#line 56 "httpclient_parser.rl"
            {
                parser->field_len = LEN(field_start, p);
            }
                goto st22;
            st22:
                if (++p == pe)
                    goto _test_eof22;
            case 22:
#line 734 "httpclient_parser.cc"
                switch ((*p)) {
                    case 10:
                        goto tr42;
                    case 13:
                        goto tr43;
                    case 32:
                        goto tr41;
                }
                if (9 <= (*p) && (*p) <= 12)
                    goto tr41;
                goto tr40;
            tr40:
#line 60 "httpclient_parser.rl"
            {
                MARK(mark, p);
            }
                goto st23;
            st23:
                if (++p == pe)
                    goto _test_eof23;
            case 23:
#line 751 "httpclient_parser.cc"
                switch ((*p)) {
                    case 10:
                        goto tr45;
                    case 13:
                        goto tr46;
                }
                goto st23;
            tr46:
#line 70 "httpclient_parser.rl"
            {
                if (parser->http_field != NULL) {
                    parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                }
            }
                goto st24;
            tr33:
#line 76 "httpclient_parser.rl"
            {
                if (parser->reason_phrase != NULL)
                    parser->reason_phrase(parser->data, PTR_TO(mark), LEN(mark, p));
            }
                goto st24;
            tr43:
#line 60 "httpclient_parser.rl"
            {
                MARK(mark, p);
            }
#line 70 "httpclient_parser.rl"
                {
                    if (parser->http_field != NULL) {
                        parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                    }
                }
                goto st24;
            tr159:
#line 62 "httpclient_parser.rl"
            {
                parser->content_len = strtol(PTR_TO(mark), NULL, 10);
            }
#line 70 "httpclient_parser.rl"
                {
                    if (parser->http_field != NULL) {
                        parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
                    }
                }
                goto st24;
            st24:
                if (++p == pe)
                    goto _test_eof24;
            case 24:
#line 798 "httpclient_parser.cc"
                if ((*p) == 10)
                    goto st20;
                goto st0;
            tr36:
#line 54 "httpclient_parser.rl"
            {
                MARK(field_start, p);
            }
                goto st25;
            tr77:
#line 66 "httpclient_parser.rl"
            {
                parser->close = 1;
            }
#line 54 "httpclient_parser.rl"
                {
                    MARK(field_start, p);
                }
                goto st25;
            st25:
                if (++p == pe)
                    goto _test_eof25;
            case 25:
#line 818 "httpclient_parser.cc"
                switch ((*p)) {
                    case 33:
                        goto st21;
                    case 58:
                        goto tr39;
                    case 79:
                        goto st26;
                    case 111:
                        goto st26;
                    case 124:
                        goto st21;
                    case 126:
                        goto st21;
                }
                if ((*p) < 45) {
                    if ((*p) > 39) {
                        if (42 <= (*p) && (*p) <= 43)
                            goto st21;
                    } else if ((*p) >= 35)
                        goto st21;
                } else if ((*p) > 46) {
                    if ((*p) < 65) {
                        if (48 <= (*p) && (*p) <= 57)
                            goto st21;
                    } else if ((*p) > 90) {
                        if (94 <= (*p) && (*p) <= 122)
                            goto st21;
                    } else
                        goto st21;
                } else
                    goto st21;
                goto st0;
            st26:
                if (++p == pe)
                    goto _test_eof26;
            case 26:
                switch ((*p)) {
                    case 33:
                        goto st21;
                    case 58:
                        goto tr39;
                    case 78:
                        goto st27;
                    case 110:
                        goto st27;
                    case 124:
                        goto st21;
                    case 126:
                        goto st21;
                }
                if ((*p) < 45) {
                    if ((*p) > 39) {
                        if (42 <= (*p) && (*p) <= 43)
                            goto st21;
                    } else if ((*p) >= 35)
                        goto st21;
                } else if ((*p) > 46) {
                    if ((*p) < 65) {
                        if (48 <= (*p) && (*p) <= 57)
                            goto st21;
                    } else if ((*p) > 90) {
                        if (94 <= (*p) && (*p) <= 122)
                            goto st21;
                    } else
                        goto st21;
                } else
                    goto st21;
                goto st0;
            st27:
                if (++p == pe)
                    goto _test_eof27;
            case 27:
                switch ((*p)) {
                    case 33:
                        goto st21;
                    case 58:
                        goto tr39;
                    case 78:
                        goto st28;
                    case 84:
                        goto st101;
                    case 110:
                        goto st28;
                    case 116:
                        goto st101;
                    case 124:
                        goto st21;
                    case 126:
                        goto st21;
                }
                if ((*p) < 45) {
                    if ((*p) > 39) {
                        if (42 <= (*p) && (*p) <= 43)
                            goto st21;
                    } else if ((*p) >= 35)
                        goto st21;
                } else if ((*p) > 46) {
                    if ((*p) < 65) {
                        if (48 <= (*p) && (*p) <= 57)
                            goto st21;
                    } else if ((*p) > 90) {
                        if (94 <= (*p) && (*p) <= 122)
                            goto st21;
                    } else
                        goto st21;
                } else
                    goto st21;
                goto st0;
            st28:
